<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/newProfile"
        android:textSize="36dp"
        android:textAlignment="center"
        android:typeface="serif"
        android:id="@+id/textViewCreate"/>

    <TextView
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_below="@id/textViewCreate"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:typeface="serif"
        android:textSize="30dp"
        android:id="@+id/textViewName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/textViewName"
        android:layout_toEndOf="@id/textViewName"
        android:id="@+id/editViewProfileName"
        android:maxLines="1"
        android:maxLength="12"
        android:inputType="text"
        android:hint="Enter Profile Name"
        android:textColorHint="@color/blue"
        android:textStyle="italic"
        android:backgroundTint="@color/blue"
        android:textColor="@color/blue"
        android:typeface="serif"
        android:textAlignment="center"/>

    <CheckBox
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:textColor="@color/blue"
        android:text="Block Apps"
        android:buttonTint="@color/blue"
        android:backgroundTint="@color/blue"
        android:textSize="20dp"
        android:typeface="serif"
        android:layout_below="@id/textViewName"
        android:id="@+id/radioButtonApps"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/blue"
        android:buttonTint="@color/blue"
        android:backgroundTint="@color/blue"
        android:text="Block Notifications"
        android:layout_toEndOf="@id/radioButtonApps"
        android:textSize="20dp"
        android:typeface="serif"
        android:layout_below="@id/textViewName"
        android:id="@+id/radioButtonNotifications"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_below="@id/radioButtonApps"
        android:id="@+id/listViewApps"
        android:divider="@color/background">

    </ListView>

    <Button
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="12dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="Create Profile"
        android:id="@+id/buttonCreateProfile"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/buttonCreateProfile"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:text="Discard Profile"
        android:layout_marginLeft="4dp"
        android:id="@+id/buttonDiscardProfile"/>


</RelativeLayout>