<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dreamteam.focus.client.profiles.ProfilesActivity">

    <Button
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="Delete"
        android:id="@+id/buttonClear"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:paddingLeft="3dp"

    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="Profiles"
        android:typeface="serif"
        android:textSize="36dp"
        android:textAlignment="center"
        android:id="@+id/textViewProfiles"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="SORT"
        android:backgroundTint="@color/blue"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="48dp"
        android:id="@+id/buttonSortProfiles"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="+"
        android:id="@+id/buttonAddProfile"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:textSize="36dp"

        />

    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewProfiles"
        android:background="@color/background"
        android:divider="@color/background"
        android:layout_below="@id/textViewProfiles">

    </ListView>


</RelativeLayout>